--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,9 +73,7 @@ services:
       - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=admin123
-    command: >
-      bash -c "pip install mlflow boto3 pymysql && 
-              mlflow server --host 0.0.0.0 --port 5000 --default-artifact-root s3://mlflow/ --backend-store-uri sqlite:////mlflow/mlflow.db"
+    command: bash -c "pip install mlflow boto3 pymysql && mlflow server --host 0.0.0.0 --port 5000 --default-artifact-root s3://mlflow/ --backend-store-uri sqlite:////mlflow/mlflow.db"
     volumes:
       - ./data/mlflow:/mlflow
     networks:
