--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
-version: '3.8'
-
 services:
   # Armazenamento de Dados
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
     container_name: minio
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: admin
-      MINIO_ROOT_PASSWORD: admin123
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     volumes:
       - ./data/minio:/data
     command: server /data --console-address ":9001"
@@ -24,92 +22,119 @@ services:
 
   # Apache Spark
   spark-master:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5.5
     container_name: spark-master
-    ports:
-      - "8080:8080"
-      - "7077:7077"
     environment:
       - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - SPARK_RUN_AS_USER=root  # Executar como root para evitar problemas de permissão
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    ports:
+      - "7077:7077"
+      - "8080:8080"
     volumes:
-      - ./app:/spark-apps
-      - ./data/spark:/opt/spark/work-dir
+      - ./data/spark/master:/opt/bitnami/spark/data  # Mapeamento para diretório local
+      - ./app:/opt/spark-apps
+      - ./requirements.txt:/requirements.txt
+    command: >
+      bash -c "
+        pip install --no-cache-dir --upgrade pip setuptools wheel &&
+        pip install --no-cache-dir --default-timeout=100 --retries=5 -r /requirements.txt &&
+        /opt/bitnami/scripts/spark/entrypoint.sh /opt/bitnami/scripts/spark/run.sh
+      "
     networks:
       - dataflow-network
 
   spark-worker:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5.5
     container_name: spark-worker
-    depends_on:
-      - spark-master
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=2G
-      - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-    volumes:
-      - ./app:/spark-apps
-      - ./data/spark:/opt/spark/work-dir
+      - SPARK_RUN_AS_USER=root  # Executar como root para evitar problemas de permissão
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - spark-master
     ports:
       - "8081:8081"
+    volumes:
+      - ./data/spark/worker:/opt/bitnami/spark/data  # Mapeamento para diretório local
+      - ./app:/opt/spark-apps
+      - ./requirements.txt:/requirements.txt
+    command: >
+      bash -c "
+        pip install --no-cache-dir --upgrade pip setuptools wheel &&
+        pip install --no-cache-dir --default-timeout=100 --retries=5 -r /requirements.txt &&
+        /opt/bitnami/scripts/spark/entrypoint.sh /opt/bitnami/scripts/spark/run.sh
+      "
     networks:
       - dataflow-network
 
   # MLflow
   mlflow:
-    image: bitnami/mlflow
+    image: bitnami/mlflow:2.22.0
     container_name: mlflow
+    user: root  # Executar como root para evitar problemas de permissão
+    command: ["-m", "mlflow", "server", "--host", "0.0.0.0", "--backend-store-uri", "sqlite:////bitnami/mlflow/mlflow.db", "--default-artifact-root", "s3://mlflow/"]
     ports:
       - "5000:5000"
     environment:
       - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=admin123
-    command: bash -c "pip install mlflow boto3 pymysql && mlflow server --host 0.0.0.0 --port 5000 --default-artifact-root s3://mlflow/ --backend-store-uri sqlite:////mlflow/mlflow.db"
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     volumes:
-      - ./data/mlflow:/mlflow
+      - ./mlruns:/app/mlruns  # Mapeamento para diretório local de mlruns
+      - ./models:/app/models  # Mapeamento para modelos
+      - ./data/mlflow/db:/bitnami/mlflow  # Armazenamento do banco de dados
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - dataflow-network
-    depends_on:
-      - minio
 
   # Prefect
   prefect:
-    image: prefecthq/prefect:2-latest
+    image: prefecthq/prefect:2.14.10-python3.11
     container_name: prefect
+    entrypoint: ["prefect", "server", "start", "--host", "0.0.0.0", "--port", "4200"]
     ports:
       - "4200:4200"
     environment:
       - PREFECT_UI_API_URL=http://localhost:4200/api
       - PREFECT_API_URL=http://localhost:4200/api
+      - PREFECT_HOME=/opt/prefect
+      - PREFECT_SERVER_DATABASE_URL=sqlite:////opt/prefect/prefect.db
+      - PREFECT_SERVER_DATABASE_MIGRATE_ON_START=true  # Garantir que as migrações sejam aplicadas corretamente
     volumes:
-      - ./flows:/opt/prefect/flows
-      - ./data/prefect:/root/.prefect
-    command: prefect server start --host 0.0.0.0 --port 4200
+      - ./data/prefect:/opt/prefect  # Mapeamento para diretório local
+      - ./flows:/opt/prefect/flows  # Já mapeado diretamente para o diretório local
+      - ./data:/opt/prefect/data    # Já mapeado diretamente para o diretório local
     networks:
       - dataflow-network
 
-  # JupyterHub
-  jupyterhub:
+  jupyter:
     image: jupyterhub/jupyterhub:latest
     container_name: jupyterhub
     ports:
-      - "8888:8888"
+      - "8888:8000"
     volumes:
+      - ./notebooks:/home/jovyan/work
       - ./jupyterhub_config.py:/srv/jupyterhub/jupyterhub_config.py
       - ./data/jupyter:/data
-      - ./notebooks:/home/jovyan/notebooks
-    command: jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker:/var/lib/docker
+    command: >
+      bash -c "apt-get update && apt-get install -y docker.io curl &&
+      pip install notebook jupyterlab jupyterhub-idle-culler &&
+      pip install jupyterhub oauthenticator dockerspawner &&
+      jupyterhub -f /srv/jupyterhub/jupyterhub_config.py"
     networks:
       - dataflow-network
+    depends_on:
+      - minio
+      - mlflow
+      - prefect
 
   # Streamlit
   streamlit:
@@ -119,77 +144,26 @@ services:
     container_name: streamlit
     ports:
       - "8501:8501"
+    environment:
+      - PATH=/.local/bin:${PATH}
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - S3_ENDPOINT=http://minio:9000
     volumes:
       - ./app:/app
     networks:
       - dataflow-network
-
-  # Airbyte - Usando componentes separados
-  airbyte-server:
-    image: airbyte/server:build-f2df1414f1-22031-master
-    container_name: airbyte-server
-    restart: unless-stopped
-    ports:
-      - "8001:8001"
-    environment:
-      - AIRBYTE_VERSION=build-f2df1414f1-22031-master
-      - AIRBYTE_API_HOST=airbyte-server:8001
-      - DATABASE_USER=airbyte
-      - DATABASE_PASSWORD=password
-      - DATABASE_URL=jdbc:postgresql://airbyte-db:5432/airbyte
-      - TRACKING_STRATEGY=segment
-      - WORKSPACE_ROOT=/data
-      - CONFIG_ROOT=/data/configs
-    volumes:
-      - ./data/airbyte:/data
     depends_on:
-      - airbyte-db
-    networks:
-      - dataflow-network
-
-  airbyte-webapp:
-    image: airbyte/webapp:build-f2df1414f1-22031-master
-    container_name: airbyte-webapp
-    restart: unless-stopped
-    ports:
-      - "8000:80"
-    environment:
-      - AIRBYTE_API_SERVER_HOST=airbyte-server
-      - AIRBYTE_API_SERVER_PORT=8001
-      - TRACKING_STRATEGY=segment
-    depends_on:
-      - airbyte-server
-    networks:
-      - dataflow-network
-
-  airbyte-db:
-    image: postgres:13
-    container_name: airbyte-db
-    restart: unless-stopped
-    environment:
-      - POSTGRES_USER=airbyte
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=airbyte
-    volumes:
-      - ./data/airbyte-db:/var/lib/postgresql/data
-    networks:
-      - dataflow-network
-
-  airbyte-temporal:
-    image: temporalio/auto-setup:1.7.0
-    container_name: airbyte-temporal
-    restart: unless-stopped
-    environment:
-      - DB=postgresql
-      - DB_PORT=5432
-      - POSTGRES_USER=airbyte
-      - POSTGRES_PWD=password
-      - POSTGRES_SEEDS=airbyte-db
-      - DYNAMIC_CONFIG_FILE_PATH=config/dynamicconfig/development.yaml
-    networks:
-      - dataflow-network
-    depends_on:
-      - airbyte-db
+      minio:
+        condition: service_healthy
+      mlflow:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   dataflow-network:
