--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ prefect==3.4.1
 streamlit==1.45.0
 jupyter==1.1.1
 jupyterhub==5.3.0
+jupyterhub-idle-culler==1.4.0
 
 # Dependências para processamento de dados
 pandas==2.2.3
