--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,16 @@ pyrightconfig.json
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Ignorar arquivos grandes JAR que excedem o limite do GitHub
+config/spark/jars/*.jar
+
+# Ignorar arquivos de dados grandes e dados de usuário
+data/minio/**
+data/mlflow/**/*.db
+data/prefect/**/*.db
+
+# Ignorar arquivos temporários
+*.swp
+*.swo
+.DS_Store
+
