--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,31 @@ services:
       - mlflow
       - prefect
 
+  # Apache NiFi
+  nifi:
+    image: apache/nifi:2.4.0
+    container_name: nifi
+    ports:
+      - "8443:8443"
+    environment:
+      - NIFI_WEB_HTTPS_PORT=8443
+      - SINGLE_USER_CREDENTIALS_USERNAME=admin
+      - SINGLE_USER_CREDENTIALS_PASSWORD=admin123
+      - NIFI_SENSITIVE_PROPS_KEY=${NIFI_SENSITIVE_PROPS_KEY:-nifi-key}
+    volumes:
+      - ./data/nifi:/opt/nifi/nifi-current/data
+      - ./config/nifi:/opt/nifi/nifi-current/conf
+    networks:
+      - dataflow-network
+    healthcheck:
+      test: ["CMD", "curl", "-k", "https://localhost:8443/nifi"]
+      interval: 30s
+      timeout: 20s
+      retries: 5
+      start_period: 60s
+    depends_on:
+      - minio
+
   # Streamlit
   streamlit:
     build:
