Atualiza integração do Apache NiFi, adiciona novos volumes e scripts de configuração, remove arquivos obsoletos e ajusta documentação para refletir as mudanças na arquitetura do DataLab.

--- a/.gitignore
+++ b/.gitignore
@@ -243,7 +243,7 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,circuitpython,python,pythonvanilla
 
-# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+# Custom rules (everything added below won't be overriden by 'Generate' option)
 
 # Ignorar arquivos grandes JAR que excedem o limite do GitHub
 config/spark/jars/*.jar
@@ -258,3 +258,6 @@ data/prefect/**/*.db
 *.swo
 .DS_Store
 
+# Ignorar todos os drivers JDBC
+nifi/drivers/**
+nifi/jdbc/**
