--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -203,52 +203,30 @@ services:
         /opt/nifi/scripts/start.sh
       "
 
-  # Kafka
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.5.0
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
-    volumes:
-      - zookeeper-data:/var/lib/zookeeper/data
-      - zookeeper-logs:/var/lib/zookeeper/log
-    healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "2181"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    networks:
-      - dataflow-network
-
+  # Kafka no modo KRaft (sem Zookeeper)
   kafka:
-    image: confluentinc/cp-kafka:7.5.0
+    image: apache/kafka:4.0.0
     container_name: kafka
-    depends_on:
-      zookeeper:
-        condition: service_healthy
     ports:
       - "9092:9092"
       - "29092:29092"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      # Configurações básicas do KRaft (mantidas apenas como redundância)
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      # Mantendo CLUSTER_ID para formatação
+      CLUSTER_ID: "5L6g3nShT-eMCtK--X86sw"
     volumes:
       - kafka-data:/var/lib/kafka/data
+      - ./config/kafka/server.properties:/opt/kafka/config/kraft-server.properties
+    command: [ "sh", "-c", "/opt/kafka/bin/kafka-storage.sh format -t $${CLUSTER_ID} -c /opt/kafka/config/kraft-server.properties && /opt/kafka/bin/kafka-server-start.sh /opt/kafka/config/kraft-server.properties" ]
     healthcheck:
-      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      test: [ "CMD-SHELL", "/opt/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list" ]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 30s
     networks:
       - dataflow-network
 
@@ -264,7 +242,8 @@ services:
     environment:
       KAFKA_CLUSTERS_0_NAME: DataLab Kafka
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+      # Removendo a configuração do Zookeeper já que não é mais necessária no modo KRaft
+      # KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
       DYNAMIC_CONFIG_ENABLED: 'true'
       SERVER_SERVLET_CONTEXT_PATH: "/"
     networks:
@@ -367,9 +346,8 @@ volumes:
     nifi-database:
     nifi-flowfile:
     nifi-provenance:
-    zookeeper-data:
-    zookeeper-logs:
     kafka-data:
+    zookeeper-logs:
 networks:
   dataflow-network:
     driver: bridge
