--- a/docker-compose.ml.yml
+++ b/docker-compose.ml.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MLflow
   mlflow:
@@ -8,7 +6,7 @@ services:
       dockerfile: Dockerfile
     container_name: mlflow
     user: root
-    command: ["-m", "mlflow", "server", "--host", "0.0.0.0", "--backend-store-uri", "postgresql://postgres:postgres@10.10.120.125:5000/mlflow", "--default-artifact-root", "s3://mlflow/artifacts/"]
+    command: ["-m", "mlflow", "server", "--host", "0.0.0.0", "--backend-store-uri", "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@${POSTGRES_HOST:-10.10.120.125}:${POSTGRES_PORT:-5000}/mlflow", "--default-artifact-root", "s3://mlflow/artifacts/"]
     ports:
       - "5000:5000"
     environment:
@@ -33,6 +31,8 @@ services:
         reservations:
           cpus: '0.5'
           memory: 1G
+    depends_on:
+      - minio
 
   # Prefect
   prefect:
@@ -154,3 +154,6 @@ services:
 networks:
   dataflow-network:
     external: true
+
+volumes:
+  postgres-data:
