--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,21 @@ requests==2.32.3
 
 # Dependências de teste
 pytest==8.3.5
+
+# Dependências para conectividade e resiliência
+retry==0.9.2
+backoff==2.2.1
+tenacity==8.3.0
+prometheus-client==1.2.0
+python-consul==1.1.0
+psycopg2-binary==2.9.9
+pymysql==1.1.0
+
+# Dependências para segurança
+cryptography==41.0.7
+python-dotenv==1.0.0
+
+# Dependências para Kafka
+confluent-kafka==2.3.0
+avro==1.11.3
+fastavro==1.9.3
