--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,14 @@ spacy==3.8.5
 fastapi==0.115.12
 uvicorn==0.34.2
 requests==2.32.3
+aiohttp==3.9.3
+pyyaml==6.0.1
 
 # Dependências de teste
 pytest==8.3.5
+
+# Dependências para CLI e interface
+click==8.1.7
 
 # Dependências para conectividade e resiliência
 retry==0.9.2
